src/objects/CRM_WF_Data_Extension__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_External_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_de_alta_de_publico_objetivo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de alta del publico objetivo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_fin_del_publico_objetivo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha fin del publico objetivo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_de_Registros__c</fullName>
        <label>Total de Registros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Data Extension</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>